[gd_scene load_steps=12 format=3 uid="uid://b182cvp28iapt"]

[ext_resource type="Script" uid="uid://bm5btv1vm5oxu" path="res://Management/checkpoint.gd" id="1_2pkr2"]
[ext_resource type="Texture2D" uid="uid://w375yp1el1xi" path="res://assets/Checkpoint_not_active.png" id="2_q55nh"]
[ext_resource type="Texture2D" uid="uid://bd8f2qpgkhj4i" path="res://assets/Checkpoint_activate.png" id="3_4xcey"]
[ext_resource type="Texture2D" uid="uid://ctc2347iaj6f" path="res://assets/Checkpoint_active.png" id="4_k64il"]
[ext_resource type="PackedScene" uid="uid://7xqtkvl73d56" path="res://Management/checkpoint_weapon_change.tscn" id="5_e4cfi"]

[sub_resource type="Animation" id="Animation_jrf87"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_k64il")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sd44n"]
resource_name = "activating"
length = 0.533337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_4xcey")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["active"],
"method": &"play_animation"
}]
}

[sub_resource type="Animation" id="Animation_l6dtp"]
resource_name = "active"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_k64il")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_evd3b"]
resource_name = "not_active"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_q55nh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6j48"]
_data = {
&"RESET": SubResource("Animation_jrf87"),
&"activating": SubResource("Animation_sd44n"),
&"active": SubResource("Animation_l6dtp"),
&"not_active": SubResource("Animation_evd3b")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nknd5"]
size = Vector2(56, 104)

[node name="Checkpoint" type="Node2D"]
script = ExtResource("1_2pkr2")

[node name="animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_l6j48")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -52)
scale = Vector2(2, 2)
texture = ExtResource("4_k64il")

[node name="player_collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_collision"]
position = Vector2(1, -52)
shape = SubResource("RectangleShape2D_nknd5")

[node name="checkpoint_weapon_change" parent="." instance=ExtResource("5_e4cfi")]
visible = false

[connection signal="body_entered" from="player_collision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_exited" from="player_collision" to="." method="_on_player_collision_body_exited"]
